[package]
name = "easy_paths"
version = "0.1.1"
authors = [ "James Hazlett <james@jameshazlett.com>" ]
description = "Convenience library for rapidly processing string-type paths."
categories = [ "development-tools", "filesystem" ]
edition = "2021"
keywords = [ "disk", "files", "paths", "storage", "strings" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jrhazlett/easy_paths"

exclude = [
    ".DS_Store",
    ".git/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shellexpand = "3.0.0"
substring = "1.4.5"
